--- a/assets/css/signup.css
+++ b/assets/css/signup.css
@@ -173,3 +173,12 @@
     top: -2.0em;
   }
 }
+
+
+/* Override Bootstrap CSS to allow carousel image to fill screen */
+.carousel-inner > .item > img, .carousel-inner > .item > a > img {
+  display: block;
+  height: auto;
+  min-width: 100%;
+  line-height: 1;
+}
